force-app/main/default/objects/Referral_Org__c/Referral_Org__c.object-meta.xml
<CustomObject>
    <description>A referral org contains contact information for a sister organization to which we may refer proposals/grants being declined, withdrawn, or closed.</description>
    <label>Referral Org</label>
    <nameField>
        <label>Referral Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Referral Orgs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>