force-app/main/default/objects/Referral_Org__c/fields/Contact_info__c.field-meta.xml
<CustomField>
    <fullName>Contact_info__c</fullName>
    <description>The contact information for this referral organization</description>
    <inlineHelpText>The contact information for this referral organization</inlineHelpText>
    <label>Contact info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>