force-app/main/default/objects/Referral_Org__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of or comments on this referral organization</description>
    <inlineHelpText>Description of or comments on this referral organization</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>