force-app/main/default/objects/Referral_Org__c/fields/No_unsolicited_proposals__c.field-meta.xml
<CustomField>
    <fullName>No_unsolicited_proposals__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if this organization does not accept unsolicited proposals, and thus should primarily be used for leveraging rather than decline referrals</description>
    <inlineHelpText>Checked if this organization does not accept unsolicited proposals, and thus should primarily be used for leveraging rather than decline referrals</inlineHelpText>
    <label>No unsolicited proposals</label>
    <type>Checkbox</type>
</CustomField>