force-app/main/default/objects/Referral_Org__c/fields/Short_name__c.field-meta.xml
<CustomField>
    <fullName>Short_name__c</fullName>
    <description>Short name for this referral org</description>
    <inlineHelpText>Short name for this referral org</inlineHelpText>
    <label>Short name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>